--- a/iProg0102_072015/Base.lproj/Main.storyboard
+++ b/iProg0102_072015/Base.lproj/Main.storyboard
@@ -119,5 +119,23 @@
             </objects>
             <point key="canvasLocation" x="519" y="280"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="mTN-BJ-t8Q">
+            <objects>
+                <viewController id="CJy-kb-8kj" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="f89-WM-UHY"/>
+                        <viewControllerLayoutGuide type="bottom" id="wad-00-VqO"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="xVQ-m0-rYZ">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.5" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="c8q-38-HBI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1029" y="161"/>
+        </scene>
     </scenes>
 </document>
