--- a/iProg0102_072015/Base.lproj/Main.storyboard
+++ b/iProg0102_072015/Base.lproj/Main.storyboard
@@ -53,6 +53,39 @@
             <point key="canvasLocation" x="927" y="909"/>
         </scene>
         <!--Item-->
+        <scene sceneID="X14-6w-FoB">
+            <objects>
+                <viewController id="ipf-Di-LL8" customClass="MapViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="7wo-B1-9Zn"/>
+                        <viewControllerLayoutGuide type="bottom" id="Eub-VR-IbE"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="kpV-wu-Kfn">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="tdb-IP-PFi">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                            </mapView>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sp9-lA-WLo">
+                                <rect key="frame" x="16" y="20" width="120" height="30"/>
+                                <state key="normal" title="Показать офисы">
+                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                </state>
+                                <connections>
+                                    <action selector="showOffices:" destination="ipf-Di-LL8" eventType="touchUpInside" id="pDS-FV-5lr"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="j1A-li-L6S"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="VIy-kG-u9T" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="915" y="-316"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="pLg-6f-Yxz">
             <objects>
                 <viewController id="3CU-mP-iRr" customClass="MyIQViewController" sceneMemberID="viewController">
@@ -113,6 +146,7 @@
                     <connections>
                         <segue destination="3CU-mP-iRr" kind="relationship" relationship="viewControllers" id="zgG-lQ-6sb"/>
                         <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="kaA-YC-0Tq"/>
+                        <segue destination="ipf-Di-LL8" kind="relationship" relationship="viewControllers" id="aot-BK-7Kp"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="OV3-WK-SfI" userLabel="First Responder" sceneMemberID="firstResponder"/>
